# ts3-clientquery-lib

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs
src/inner/: client.rs  connection.rs  mod.rs  types.rs
