[package]
name = "ts3-clientquery-lib"
version = "0.0.1-alpha"
edition = "2021"
authors = ["KunoiSayami <i@leanhe.dev>"]
description = "A teamspeak clientquery(tcp) library"
license = "AGPL-3.0-or-later"

[dependencies]
serde-teamspeak-querystring = "0.2.1"
tokio = { version = "1.28.1", features = ["net", "time", "io-util"] }
log = { version = "0.4.17", optional = true }
serde = "1.0.163"
serde_derive = "1.0.163"

[features]
default = []